# FileEncrypt

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/famgy/fileencrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/famgy/fileencrypt/: AskPermission.java  MainActivity.java  PdfViewerActivity.java  TxtViewerActivity.java
app/src/main/java/com/famgy/fileencrypt/filesecurity/: FileSecurity.java  NativeHandler.java
app/src/main/java/com/famgy/fileencrypt/hook/: ElfHookMain.java
app/src/main/java/com/famgy/fileencrypt/hook/xhook/: NativeHandler.java  XHook.java
app/src/main/java/com/famgy/fileencrypt/hook/xhookapply/: NativeHandler.java  XHookApply.java
app/src/main/jni/crypto/: CMakeLists.txt  gm_jni.cpp  sm4.c
app/src/main/jni/crypto/util/: debug.cpp  debug.h
app/src/main/jni/filesecurity/: CMakeLists.txt  file_encrypt.cpp  file_encrypt.h  file_log.cpp  file_log.h  file_security.cpp  file_security.h  fs_jni.cpp
app/src/main/jni/hook/inlinehook/: CMakeLists.txt  inlineHook.h  main.cpp  relocate.c
app/src/main/jni/hook/xhook/: CMakeLists.txt  xh_jni.c
app/src/main/jni/hook/xhookapply/: CMakeLists.txt  xhookapply.c
app/src/main/res/layout/: activity_main.xml  activity_pdf_viewer.xml  activity_txt_viewer.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/famgy/fileencrypt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
